catalogs . services added / todo preview of image and pdf paths

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import 'layouts/header';
 @import 'layouts/footer';
 @import 'layouts/admin';
+@import 'layouts/admin-cover';
 @import 'layouts/admin-sidebar';
 //
 //// Bootstrap
