--- a/public/css/app.css
+++ b/public/css/app.css
@@ -508,8 +508,100 @@ footer .footer-down__social .social-network:last-child {
 }
 
 #admin-app {
-  display: flex;
+  display: none;
+  min-height: 100vh;
+  position: relative;
+}
+
+#admin-app-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
   height: 100vh;
+  background: white;
+  z-index: 9;
+  transition: 0.1s ease-in;
+}
+
+.sk-cube-grid {
+  width: 60px;
+  height: 60px;
+  margin: 20% auto;
+}
+
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  background-color: #448aff;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+  animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+}
+
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    transform: scale3D(1, 1, 1);
+  }
+
+  35% {
+    transform: scale3D(0, 0, 1);
+  }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    transform: scale3D(1, 1, 1);
+  }
+
+  35% {
+    transform: scale3D(0, 0, 1);
+  }
 }
 
 .admin-sidebar-wrapper {
@@ -517,20 +609,21 @@ footer .footer-down__social .social-network:last-child {
   flex-direction: column;
   width: 250px;
   height: 100%;
-  border-right: 1px solid #bdbdbd;
 }
 
 .admin-sidebar-wrapper a {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-decoration: none;
   width: 100%;
   height: 40px;
-  background: lightgray;
   font-size: 18px;
+  padding-left: 20px;
+  color: #4e515a !important;
 }
 
 .admin-sidebar-wrapper a:hover {
-  background: grey;
+  background: lightgray;
+  text-decoration: none;
 }
