--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -140,6 +140,7 @@ button {
 html, body {
     margin: 0;
     padding: 0;
-    font-family: $font-regular;
+    font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
+    line-height: 1.5;
 }
