--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,3 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
 @import 'layouts/header';
@@ -8,6 +5,14 @@
 @import 'layouts/admin';
 @import 'layouts/admin-cover';
 @import 'layouts/admin-sidebar';
+@import 'admin/index';
+@import 'home/home';
+@import 'home/about/index';
+@import 'home/news/index';
+@import 'home/news/item';
+@import 'home/brands_catalogs';
+@import 'home/product';
+@import 'home/service';
 //
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
