--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 // Variables
 @import 'variables';
 @import 'layouts/header';
+@import 'layouts/header-second';
 @import 'layouts/footer';
 @import 'layouts/admin';
 @import 'layouts/admin-cover';
