--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,9 +56,9 @@
   }
 }
 
-.breadcrumbs,
 .about-container .first-section .img-container,
-.about-container .work-goals li {
+.about-container .work-goals li,
+.breadcrumbs {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -257,6 +257,31 @@ header .translation__en {
 header .translation__ru:hover,
 header .translation__en:hover {
   color: #ff5e15;
+}
+
+.header-container {
+  height: 175px;
+  background: #002359;
+  border-bottom: 10px solid #ff5e15;
+  background: url(/images/header-default.png?3a81fc2c0154929848a7b12e0a68bdc4) no-repeat 50% 100%;
+}
+
+.header-container .header-box {
+  color: white;
+  align-items: flex-start;
+  height: 100%;
+}
+
+.header-container .header-box__title {
+  font-size: 36px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 6px;
+}
+
+.header-container .header-box__text {
+  font-size: 14px;
+  height: 150px;
 }
 
 footer {
@@ -775,30 +800,95 @@ footer .footer-down__social .social-network:last-child {
   outline: none;
 }
 
-.header-container {
-  height: 175px;
-  background: #002359;
-  border-bottom: 10px solid #ff5e15;
-  margin-bottom: 40px;
-  background: url(/images/header-default.png?3a81fc2c0154929848a7b12e0a68bdc4) no-repeat 50% 100%;
+.pagination-container nav .pagination {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  padding-left: 0;
+  padding-right: 4vw;
 }
 
-.header-container .header-box {
-  color: white;
-  align-items: flex-start;
-  height: 100%;
+.pagination-container nav .pagination .page-item {
+  width: 40px;
+  height: 40px;
+  border-left: 1px solid #dee2e6;
+  border-top: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.header-container .header-box__title {
-  font-size: 36px;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 6px;
+.pagination-container nav .pagination .page-item:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
-.header-container .header-box__text {
+.pagination-container nav .pagination .page-item:last-child {
+  border-right: 1px solid #dee2e6;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.pagination-container nav .pagination .page-item.active {
+  background: #0a1229;
+}
+
+.pagination-container nav .pagination .page-item.active .page-link {
+  color: whitesmoke;
+}
+
+.pagination-container nav .pagination .page-item.disabled {
+  color: whitesmoke;
+  cursor: not-allowed;
+}
+
+.pagination-container nav .pagination .page-item.disabled .page-link {
+  color: lightgray;
+}
+
+.pagination-container nav .pagination .page-item .page-link {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #0a1229;
+}
+
+.breadcrumbs {
+  justify-content: flex-start;
+  margin-top: 40px;
+  padding: 0;
+  width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .breadcrumbs {
+    padding-left: 10px;
+  }
+}
+
+.breadcrumbs__item {
+  text-decoration: none;
   font-size: 14px;
-  height: 150px;
+  margin-right: 3px;
+  font-weight: bolder;
+  color: #9e9e9e;
+  cursor: pointer;
+  text-align: center;
+}
+
+.breadcrumbs__item:hover {
+  color: #002359;
+}
+
+.breadcrumbs__item.current {
+  color: #002359;
+  pointer-events: none;
+}
+
+.breadcrumbs__divider {
+  color: #9e9e9e;
 }
 
 .about-container {
@@ -920,35 +1010,10 @@ footer .footer-down__social .social-network:last-child {
   justify-content: center;
 }
 
-.header-container {
-  height: 175px;
-  background: #002359;
-  border-bottom: 10px solid #ff5e15;
-  background: url(/images/header-default.png?3a81fc2c0154929848a7b12e0a68bdc4) no-repeat 50% 100%;
-}
-
-.header-container .header-box {
-  color: white;
-  align-items: flex-start;
-  height: 100%;
-}
-
-.header-container .header-box__title {
-  font-size: 36px;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 6px;
-}
-
-.header-container .header-box__text {
-  font-size: 14px;
-  height: 150px;
-}
-
 .news-container {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   padding: 2vw;
   font-size: 1.2rem;
@@ -963,9 +1028,11 @@ footer .footer-down__social .social-network:last-child {
 }
 
 .news-container .news-block {
-  width: 30vw;
+  width: 22vw;
   margin-bottom: 40px;
   margin-right: 2vw;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 @media (max-width: 1024px) {
@@ -974,125 +1041,82 @@ footer .footer-down__social .social-network:last-child {
   }
 }
 
-.news-container .news-block mat-card-title {
-  height: 75px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-@media (max-width: 1024px) {
-  .news-container .news-block mat-card-title {
-    height: auto;
-  }
-}
-
-.news-container .news-block .news-image {
+.news-container .news-block__header .news-image {
   height: 275px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-position: center;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 @media (max-width: 1024px) {
-  .news-container .news-block .news-image {
+  .news-container .news-block__header .news-image {
     background-size: contain;
   }
 }
 
-.news-container .news-block mat-card-content {
+.news-container .news-block__content {
   height: 160px;
+  padding: 5px;
 }
 
 @media (max-width: 1024px) {
-  .news-container .news-block mat-card-content {
+  .news-container .news-block__content {
     height: auto;
   }
 }
 
-.news-container .news-block mat-card-actions {
+.news-container .news-block__title {
+  height: 40px;
+  font-size: 15px;
+  font-weight: bold;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 5px;
 }
 
-.news-container .news-block mat-card-actions button {
+@media (max-width: 1024px) {
+  .news-container .news-block__title {
+    height: auto;
+  }
+}
+
+.news-container .news-block__short-text {
+  font-size: 13px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 5px;
+}
+
+.news-container .news-block__actions {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.news-container .news-block__actions a {
   color: whitesmoke;
   background: #002359;
+  font-weight: 300;
+  font-size: 14px;
 }
 
-.pagination-container {
-  width: 100%;
+.news-container .news-block__date {
+  font-weight: 300;
+  font-size: 12px;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 50px;
+  align-items: flex-end;
 }
 
 .news-item-wrapper {
   display: flex;
   flex-direction: column;
-}
-
-.breadcrumbs {
-  justify-content: flex-start;
-  margin-top: 40px;
-  padding: 0;
-}
-
-@media (max-width: 1024px) {
-  .breadcrumbs {
-    padding-left: 10px;
-  }
-}
-
-.breadcrumbs__item {
-  text-decoration: none;
-  font-size: 14px;
-  margin-right: 3px;
-  font-weight: bolder;
-  color: #9e9e9e;
-  cursor: pointer;
-  text-align: center;
-}
-
-.breadcrumbs__item:hover {
-  color: #002359;
-}
-
-.breadcrumbs__item.current {
-  color: #002359;
-  pointer-events: none;
-}
-
-.breadcrumbs__divider {
-  color: #9e9e9e;
-}
-
-.header-container {
-  height: 175px;
-  background: #002359;
-  border-bottom: 10px solid #ff5e15;
-  background: url(/images/header-default.png?3a81fc2c0154929848a7b12e0a68bdc4) no-repeat 50% 100%;
-}
-
-.header-container .header-box {
-  color: white;
-  align-items: flex-start;
-  height: 100%;
-}
-
-.header-container .header-box__title {
-  font-size: 36px;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 6px;
-}
-
-.header-container .header-box__text {
-  font-size: 14px;
-  height: 150px;
 }
 
 .news-item-container {
