--- a/resources/sass/home/news/index.scss
+++ b/resources/sass/home/news/index.scss
@@ -9,36 +9,10 @@
     //align-items: flex-end;
 }
 
-.header-container {
-    height: 175px;
-    background: $main-color2;
-    border-bottom: 10px solid $main-color1;
-    background: url("/img/header/header-default.png") no-repeat 50% 100%;
-
-    .header-box {
-        color: white;
-        @extend %fcc;
-        align-items: flex-start;
-        height: 100%;
-
-        &__title {
-            font-size: 36px;
-            text-transform: uppercase;
-            font-weight: bold;
-            letter-spacing: 6px;
-        }
-
-        &__text {
-            font-size: 14px;
-            height: 150px;
-        }
-    }
-}
-
 .news-container {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     padding: 2vw;
     font-size: 1.2rem;
@@ -50,66 +24,85 @@
     }
 
     .news-block {
-        width: 30vw;
+        width: 22vw;
         margin-bottom: 40px;
         margin-right: 2vw;
+        box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+        border-radius: 4px;
 
         @media #{$noDesktop} {
             width: 100%;
         }
 
-        mat-card-title {
-            height: 75px;
+        &__header {
+            .news-image {
+                height: 275px;
+                background-repeat: no-repeat;
+                background-size: cover;
+                margin-bottom: 10px;
+                background-position: center;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+
+                @media #{$noDesktop} {
+                    background-size: contain;
+
+                }
+            }
+        }
+
+        &__content {
+            height: 160px;
+            padding: 5px;
+
+            @media #{$noDesktop} {
+                height: auto;
+            }
+        }
+
+        &__title {
+            height: 40px;
+            font-size: 15px;
+            font-weight: bold;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: flex-start;
+            margin-bottom: 5px;
 
             @media #{$noDesktop} {
                 height: auto;
             }
         }
 
-        .news-image {
-            height: 275px;
-            background-repeat: no-repeat;
-            background-size: cover;
-            margin-bottom: 20px;
-            background-position: center;
-
-
-            @media #{$noDesktop} {
-                background-size: contain;
-
-            }
-        }
-
-        mat-card-content {
-            height: 160px;
-
-            @media #{$noDesktop} {
-                height: auto;
-            }
-        }
-
-        mat-card-actions {
+        &__short-text {
+            font-size: 13px;
             display: flex;
-            justify-content: flex-end;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            margin-bottom: 5px;
+        }
 
-            button {
+        &__actions {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px;
+
+
+            a {
                 color: whitesmoke;
                 background: $main-color2;
+                font-weight: 300;
+                font-size: 14px;
             }
         }
+
+        &__date {
+            font-weight: 300;
+            font-size: 12px;
+            display: flex;
+            align-items: flex-end;
+        }
     }
-}
-
-.pagination-container {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-right: 50px;
-
-
 }
