--- a/resources/sass/home/home.scss
+++ b/resources/sass/home/home.scss
@@ -1,60 +1,75 @@
-.pagination-container {
+.pagination {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    padding-left: 0;
+    margin-bottom: 40px;
 
-    nav {
+    .page-item {
+        width: 40px;
+        height: 40px;
+        border-left: 1px solid #dee2e6;
+        border-top: 1px solid #dee2e6;
+        border-bottom: 1px solid #dee2e6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        //border-radius: 3px;
 
-        .pagination {
-            list-style: none;
+        &:first-child {
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
+
+        &:last-child {
+            border-right: 1px solid #dee2e6;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
+
+        &.active {
+            background: $main-color3;
+
+            .page-link {
+                color: whitesmoke;
+            }
+        }
+
+        &.disabled {
+            color: whitesmoke;
+            cursor: not-allowed;
+
+            .page-link {
+                color: lightgray;
+            }
+        }
+
+        &:hover {
+        }
+
+        .page-link {
+            text-decoration: none;
             display: flex;
-            justify-content: flex-end;
-            padding-left: 0;
-            padding-right: 4vw;
+            justify-content: center;
+            align-items: center;
+            color: $main-color3;
+            width: 100%;
+            height: 100%;
+            transition: .1s ease-in;
 
-            .page-item {
-                width: 40px;
-                height: 40px;
-                border-left: 1px solid #dee2e6;
-                border-top: 1px solid #dee2e6;
-                border-bottom: 1px solid #dee2e6;
+            span {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                //border-radius: 3px;
+            }
 
-                &:first-child {
-                    border-top-left-radius: 4px;
-                    border-bottom-left-radius: 4px;
-                }
+            &:hover {
+                text-decoration: none;
 
-                &:last-child {
-                    border-right: 1px solid #dee2e6;
-                    border-top-right-radius: 4px;
-                    border-bottom-right-radius: 4px;
-                }
+            }
 
-                &.active {
-                    background: $main-color3;
-
-                    .page-link {
-                        color: whitesmoke;
-                    }
-                }
-
-                &.disabled {
-                    color: whitesmoke;
-                    cursor: not-allowed;
-
-                    .page-link {
-                        color: lightgray;
-                    }
-                }
-
-                .page-link {
-                    text-decoration: none;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    color: $main-color3;
-                }
+            .sr-only {
+                display: none;
             }
         }
     }
@@ -90,7 +105,7 @@
         }
     }
 
-    &__divider{
+    &__divider {
         color: #9e9e9e;
     }
 }
