--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,7 +16,7 @@
 @import 'home/service/index';
 @import 'home/service/metalworking';
 @import 'home/service/recovery';
-@import 'home/product';
+@import 'home/product/index';
 
 //
 //// Bootstrap
