--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,6 +56,7 @@
   }
 }
 
+#accordion .card__header a,
 .metalworking-wrapper .second-section .services__item .text,
 .metalworking-wrapper .first-section .img-container,
 .media,
@@ -2000,4 +2001,103 @@ footer .footer-down__social .social-network:last-child {
 
 .recovery-wrapper .third-section .coating-item__description {
   text-align: justify;
+}
+
+.home-product-wrapper {
+  padding: 0;
+  margin-top: 40px;
+}
+
+.content-container {
+  display: flex;
+  padding: 0;
+}
+
+.navigation-container .category-title {
+  font-size: 26px;
+  margin-bottom: 40px;
+}
+
+#accordion {
+  box-sizing: border-box;
+  width: 350px;
+}
+
+#accordion .card {
+  margin-bottom: 5px;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 0;
+  border: none;
+}
+
+#accordion .card:first-child {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+#accordion .card:last-child {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+#accordion .card__header {
+  background: #002359;
+  height: 60px !important;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: inherit;
+}
+
+#accordion .card__header.active {
+  background: #ff5e15;
+}
+
+#accordion .card__header a {
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
+#accordion .card__header a button {
+  color: white;
+  text-align: left;
+  font-size: 15px;
+  font-weight: 400;
+  width: 100%;
+  height: 100%;
+  padding: 3px 25px;
+}
+
+#accordion .card__header a button:hover {
+  text-decoration: none;
+}
+
+#accordion .card__header .text {
+  width: 100%;
+  height: 100%;
+  white-space: pre-wrap;
+}
+
+#accordion .card__body {
+  width: 100%;
+}
+
+#accordion .card__body a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  height: 40px;
+  border-bottom: 1px solid #d3d3d3;
+  padding: 5px 5px 5px 15px;
+  color: black;
+  text-decoration: none;
+  width: 100%;
+  font-size: 13px;
+  font-weight: 300;
+}
+
+#accordion .card__body a:hover {
+  background: #e9e9e9;
 }
