--- a/resources/sass/home/home.scss
+++ b/resources/sass/home/home.scss
@@ -14,6 +14,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        outline: none;
+
         //border-radius: 3px;
 
         &:first-child {
@@ -56,6 +58,9 @@
             width: 100%;
             height: 100%;
             transition: .1s ease-in;
+            background: none!important;
+            outline: none;
+            border-color: transparent;
 
             span {
                 display: flex;
@@ -65,7 +70,10 @@
 
             &:hover {
                 text-decoration: none;
+            }
 
+            &:focus {
+                box-shadow: none;
             }
 
             .sr-only {
