--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 @import 'home/service/metalworking';
 @import 'home/service/recovery';
 @import 'home/product/index';
+@import 'home/product/item';
 
 //
 //// Bootstrap
