--- a/resources/sass/home/product/index.scss
+++ b/resources/sass/home/product/index.scss
@@ -2,11 +2,21 @@
     padding: 0;
     margin-top: 40px;
     position: relative;
-}
-.content-container {
-    display: flex;
-    padding: 0;
-    justify-content: space-between;
+
+    .content-container {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 40px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .breadcrumbs {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-top: 0;
+    }
 }
 
 .navigation-container {
@@ -107,8 +117,6 @@
     min-height: 930px;
     display: flex;
     flex-direction: column;
-    position: relative;
-
 
     .selected-name {
         font-size: 26px;
