--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@
 @import 'layouts/admin-cover';
 @import 'layouts/admin-sidebar';
 @import 'admin/index';
-@import 'home/home';
+@import 'home/main/index';
 @import 'home/about/index';
 @import 'home/news/index';
 @import 'home/news/item';
