--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -144,3 +144,13 @@ html, body {
     overflow-x: hidden;
     line-height: 1.5;
 }
+
+h3 {
+    font-size: 26px;
+    margin:0;
+}
+
+h5 {
+    font-size: 22px;
+    margin:0;
+}
