--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 @import 'layouts/admin-cover';
 @import 'layouts/admin-sidebar';
 @import 'admin/index';
+@import 'home/home';
 @import 'home/main/index';
 @import 'home/about/index';
 @import 'home/news/index';
@@ -22,3 +23,5 @@
 //
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
+
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
