--- a/resources/sass/layouts/_admin-sidebar.scss
+++ b/resources/sass/layouts/_admin-sidebar.scss
@@ -1,23 +1,295 @@
-.admin-sidebar-wrapper {
+.spinner {
+    border: 16px solid silver;
+    border-top: 16px solid #337AB7;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 700ms linear infinite;
+    top:50%;
+    left:50%;
+    position: absolute;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg) }
+    100% { transform: rotate(-360deg) }
+}
+
+.side-bar {
+    height: 100vh;
+    width: 400px;
+    position: fixed;
+    background: $main-color3;
+    right: 0;
+    top: 0;
+    transform: translate3d(100%, 0, 0);
+    transition: .4s ease-in-out;
     display: flex;
     flex-direction: column;
-    width: 250px;
-    height: 100%;
+    z-index: 999;
+    visibility: hidden;
+    box-sizing: border-box;
 
-    a {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        text-decoration: none;
+    @media #{$noDesktop} {
+        width: 100vw;
+    }
+
+    &.active {
+        visibility: visible;
+        transform: translate3d(0, 0, 0);
+    }
+
+    .cross-box {
         width: 100%;
-        height: 40px;
-        font-size: 18px;
-        padding-left: 20px;
-        color: #4e515a!important;
+        cursor: pointer;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        transition: .2s ease-out;
+        margin-bottom: 20px;
+
+        @media #{$mobile} {
+            margin-bottom: 0;
+        }
 
         &:hover {
-            background: lightgray;
-            text-decoration: none;
+            .cross-square {
+                .line {
+                    &.line-crossed-left {
+                        animation: spin1 .3s linear;
+                    }
+
+                    &.line-crossed-right {
+                        animation: spin2 .3s linear;
+                    }
+                }
+            }
         }
+
+        .cross-square {
+            width: 70px;
+            height: 70px;
+            background: $main-color1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            transition: .2s ease-out;
+
+            @media #{$mobile} {
+                width: 40px;
+                height: 40px;
+            }
+
+            .line {
+                width: 1rem;
+                border: 2px solid white;
+                border-radius: 5px;
+                position: absolute;
+
+                &.line-crossed-left {
+                    transform: rotate(45deg);
+                }
+
+                &.line-crossed-right {
+                    transform: rotate(135deg);
+                }
+            }
+        }
+
+
+    }
+
+    .link-box {
+        padding: 30px;
+
+        @media #{$desktop} {
+            display: none;
+        }
+
+        @media #{$noDesktop} {
+            display: block;
+        }
+
+        @media #{$mobile} {
+            padding: 0 20px;
+            margin-bottom: 20px;
+        }
+
+        .item {
+            width: 100%;
+            height: 40px;
+            border-top: 1px solid $main-color4;
+            border-left: 1px solid $main-color4;
+            border-right: 1px solid $main-color4;
+            @extend %fc;
+
+            &:last-child {
+                border-bottom: 1px solid $main-color4;
+            }
+
+            @media #{$mobile} {
+                width: 100%;
+            }
+
+            a {
+                width: 100%;
+                height: 100%;
+                color: white;
+                @extend %fc;
+                text-decoration: none;
+
+                @media #{$tablet} {
+                    font-size: 22px;
+                }
+
+                @media #{$mobile} {
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+
+    .info-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        color: $main-color5;
+        width: 100%;
+        padding: 30px;
+
+        @media #{$mobile} {
+            padding: 5px 5px 5px 20px;
+        }
+
+        .link-container {
+            margin: 50px 0;
+            width: 280px;
+            border: 1px solid $main-color4;
+
+            .item {
+                border-bottom: 1px solid $main-color4;
+                width: 100%;
+                height: 70px;
+                @extend %fc;
+
+                &:last-child {
+                    border-bottom: none;
+                }
+
+                &:active {
+                    background: $main-color1;
+                }
+
+                a {
+                    text-decoration: none;
+                    color: whitesmoke;
+                    width: 100%;
+                    height: 100%;
+                    @extend %fc;
+                    font-size: 20px;
+                }
+
+            }
+        }
+
+        &__head {
+            color: white;
+            margin-bottom: 15px;
+
+            @media #{$mobile} {
+                font-size: 14px;
+            }
+        }
+
+        &__description {
+            font-size: 16px;
+            padding-bottom: 20px;
+
+            @media #{$mobile} {
+                font-size: 12px;
+            }
+        }
+
+        &__item {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            padding-bottom: 20px;
+
+            @media #{$mobile} {
+                padding-bottom: 10px;
+            }
+        }
+
+        &__small-img {
+            padding-right: 20px;
+        }
+
+        &__small-text {
+
+            @media #{$mobile} {
+                font-size: 12px;
+            }
+        }
+
+        &__social {
+            border: 1px solid $main-color4;
+            width: 210px;
+            height: 70px;
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            @media #{$mobile} {
+                height: 40px;
+                width: 120px;
+            }
+
+
+            .social-network {
+                width: 70px;
+                height: 70px;
+                border-right: 1px solid $main-color4;
+                cursor: pointer;
+                transition: .2s ease-in-out;
+
+                @media #{$mobile} {
+                    height: 40px;
+                    width: 40px;
+                }
+
+                a {
+                    width: 100%;
+                    height: 100%;
+                    color: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-decoration: none;
+                }
+
+                &:hover {
+                    background: $main-color1;
+                }
+
+                &:last-child {
+                    border-right: none;
+                }
+            }
+        }
+    }
+}
+
+@keyframes spin1 {
+    100% {
+        transform: rotate(225deg);
+    }
+}
+
+@keyframes spin2 {
+    100% {
+        transform: rotate(315deg);
     }
 }
