--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -39,14 +39,19 @@ header {
         }
 
         a {
-            text-decoration: none;
             width: 100%;
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 1.1rem;
-            color: black;
+            color: black!important;
+            text-decoration: none!important;
+
+            &:hover {
+                text-decoration: none!important;
+                color: black!important;
+            }
         }
 
         &.logo {
@@ -123,16 +128,41 @@ header {
     .translation {
         width: 25rem;
         height: 100%;
+        display: flex;
+        flex-direction: column;
 
-        &__ru, &__en {
-            width: 100%;
-            height: 50%;
+        .nav-item {
             display: flex;
             justify-content: center;
             align-items: center;
+            width: 100%;
+            height: 50%;
+
+
+            &:first-child {
+                border-bottom: 1px solid lightgrey;
+            }
 
             &:hover {
-                color: $main-color1;
+                background: url("/img/default_pattern.png");
+                background-position: 520px 0;
+                transition: 15s linear;
+            }
+        }
+
+        &__ru, &__en {
+            text-decoration: none!important;
+            color: black !important;
+            font-weight: 300;
+
+
+            &.active {
+                font-weight: bold;
+            }
+
+            &:hover {
+                color: $main-color1!important;
+                text-decoration: none!important;
             }
         }
     }
